Media Controls: Do not show cached timeline segment

The modern media controls should not show what has been previously
cached on the left hand side of the play head. This pins the segment to
the zero position so it always is filled in.

BUG=827539

Change-Id: I97f5f06b7e349faf163667d2b19ef8930e0b13c7
Reviewed-on: https://chromium-review.googlesource.com/994180
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548099}
Former-commit-id: fa0aceda11dedd026dc915be2b04654dbf9dba20